--- a/frontend/src/screens/RegisterScreen/RegisterScreen.scss
+++ b/frontend/src/screens/RegisterScreen/RegisterScreen.scss
@@ -2,9 +2,11 @@
   height: 100vh;
   display: grid;
   place-content: center;
+  background-color: #f6f9fc;
 }
 
 .registerContainer form {
+  background-color: white;
   width: 500px;
   height: fit-content;
   padding: 0 50px 50px 50px;
@@ -20,6 +22,13 @@
       box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
       border-radius: 50%;
       margin: 10px 0;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
     label {
       font-size: 16px;
